--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "commonjs",
   "scripts": {
     "start": "node mcp-server.js"
+    "gcp-build": "npm install --omit=dev"
   },
   "dependencies": {
     "express": "^4.18.2",
     "uuid": "^9.0.1"
   }
 }
-
