--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
-{
+const express = require('express');
+const app = express();
+const PORT = process.env.PORT || 8080; // Use port from environment variable or default to 8080
+
+app.listen(PORT, () => {
+  console.log(`MCP server listening at http://localhost:${PORT}`);
+  // ... rest of your server setup
   "name": "snake-game-mcp-server",
   "version": "1.0.0",
   "main": "mcp-server.js",
@@ -12,5 +18,6 @@
     "uuid": "^9.0.1"
   }
 }
+});
 
 
